--- a/src/components/common/layout.pug
+++ b/src/components/common/layout.pug
@@ -3,3 +3,7 @@ include ../hero/hero
 include ../advantages/advantages
 include ../catalog/catalog
 include ../parameters/parameters
+include ../callback/callback
+include ../documents/documents
+include ../reviews/reviews
+include ../help/help
