--- a/src/components/common/variables.scss
+++ b/src/components/common/variables.scss
@@ -1,7 +1,7 @@
 $color-white: #fefefe;
 $color-bg: #3a3330;
 $color-gray: #a59c87;
-$color-main: #86a51b;
+$color-main: #386d07;
 
 $tablet: 1200px;
 $mobile: 768px;
