--- a/src/components/parameters/parameters.scss
+++ b/src/components/parameters/parameters.scss
@@ -1,5 +1,9 @@
 .parameters {
   padding: 100px 0;
+  background-image: url('../img/parameters-bg.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
 
   &__container {
     position: relative;
@@ -9,6 +13,7 @@
   &__title {
     font-size: 42px;
     font-weight: bold;
+    margin: 0;
     margin-bottom: 24px;
   }
 
