--- a/src/style.scss
+++ b/src/style.scss
@@ -13,3 +13,7 @@
 @import './components/advantages/advantages';
 @import './components/catalog/catalog';
 @import './components/parameters/parameters';
+@import './components/callback/callback';
+@import './components/documents/documents';
+@import './components/reviews/reviews';
+@import './components/help/help';
