--- a/src/components/common/base.scss
+++ b/src/components/common/base.scss
@@ -53,6 +53,9 @@ img {
   border-radius: 6px;
   text-align: center;
   text-decoration: none;
+  background: none;
+  font-size: 20px;
+  cursor: pointer;
 
   &::before {
     content: '';
