--- a/src/index.pug
+++ b/src/index.pug
@@ -6,13 +6,18 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
+    title Minimi
     link(rel="stylesheet", href="./source/style/style.css")
   body
     +header
     +hero
     +advantages
     +catalog
+    +callback
     +parameters
+    +documents
+    +reviews
+    +help
+
 
     script(src="./source/js/script.js")
