--- a/src/components/common/layout.pug
+++ b/src/components/common/layout.pug
@@ -7,3 +7,6 @@ include ../callback/callback
 include ../documents/documents
 include ../reviews/reviews
 include ../help/help
+include ../footer/footer
+include ../traces/traces
+include ../popup/popup
