--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -3,12 +3,11 @@ mixin header
     .container
       .header__container
         .header__logo
-          p.header__title Дом Шпицев «MiniMi»
-          p.header__sub лучшие малыши России
+          p.header__title Породистые щенки Померанского Шпица
         .header__contacts
-          a.header__link(href="tel:+79175357876")
+          a.header__link(href="tel:+79851914142")
             +img('icons/phone.png', 'header__icon')
-            span.header__link-gray +7 (917)
-            | 535-78-76
-          a.link(href="#")
+            span.header__link-gray +7 (985)
+            | 191-41-42
+          a.link.js-open-popup(href="#")
             span.link__text Заказать обратный звонок
