--- a/src/index.pug
+++ b/src/index.pug
@@ -9,15 +9,20 @@ html(lang="en")
     title Minimi
     link(rel="stylesheet", href="./source/style/style.css")
   body
-    +header
-    +hero
-    +advantages
-    +catalog
-    +callback
-    +parameters
-    +documents
-    +reviews
-    +help
+
+    .content
+      +header
+      +hero
+      +advantages
+      +catalog
+      +callback
+      +parameters
+      +documents
+      +reviews
+      +help
+      +footer
+    +traces
+    +popup
 
 
     script(src="./source/js/script.js")
