--- a/src/style.scss
+++ b/src/style.scss
@@ -17,3 +17,6 @@
 @import './components/documents/documents';
 @import './components/reviews/reviews';
 @import './components/help/help';
+@import './components/footer/footer';
+@import './components/traces/traces';
+@import './components/popup/popup';
