--- a/src/components/callback/callback.scss
+++ b/src/components/callback/callback.scss
@@ -10,18 +10,18 @@
 
   &__img {
     position: absolute;
-    bottom: -57px;
-    left: -80px;
+    bottom: -20px;
+    left: 0;
+    max-width: 100%;
   }
 
   &__content {
     position: relative;
-    margin-left: 45%;
-    padding: 60px 0;
+    padding: 60px 0 340px;
+    text-align: center;
   }
 
   &__title {
-    max-width: 380px;
     margin: 0;
     margin-bottom: 28px;
     font-size: 42px;
@@ -43,13 +43,19 @@
     line-height: 1.5;
   }
 
+  &__flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   &__input {
     display: block;
     width: 100%;
     max-width: 450px;
     padding: 24px 12px 24px 80px;
-    margin-bottom: 36px;
     border-radius: 6px;
+    margin-right: 20px;
     border: none;
     background-color: #f5eddc;
     background-image: url('../img/icons/input_phone.png');
