--- a/src/components/catalog/catalog.pug
+++ b/src/components/catalog/catalog.pug
@@ -79,11 +79,11 @@ mixin catalog
               .catalog__card-front
                 +img(card.img, 'catalog__card-dog')
                 .catalog__card-add
-                  +img('icons/card_plus.png', 'catalog__card-add-icon')
+                  +svg('more', '30px', '30px', 'catalog__card-add-icon')
               .catalog__card-back
                 .catalog__card-content
                   p.catalog__card-title !{card.title}
                   p.catalog__card-text !{card.text1}
                   p.catalog__card-text !{card.text2}
-                  a.btn.catalog__btn(href="#")
+                  a.btn.catalog__btn.js-open-popup(href="#")
                     span.btn__text Хочу!
