--- a/src/components/common/mixin.pug
+++ b/src/components/common/mixin.pug
@@ -3,11 +3,8 @@
 
 
 mixin img(name, className)
-  //- -var nameWebp = name.split('.')[0] + '.webp'
-  //- picture
-    //- source(srcset= img + nameWebp, type="image/webp")
   img(src= $img + name, class= className, alt= name)
 
 mixin svg(id, widthSVG, heightSVG, className)
   svg(class= className height=heightSVG width=widthSVG)
-    use(xlink:href="./img/sprites/sprite.svg#" + id)
+    use(xlink:href="./source/img/sprite.svg#" + id)
