--- a/src/components/help/help.scss
+++ b/src/components/help/help.scss
@@ -10,6 +10,12 @@
 
   &__item {
     text-align: center;
+    min-width: 150px;
+    padding: 0 5px;
+  }
+
+  &__item-icon {
+    height: 45px;
   }
 
   &__item-text {
