--- a/src/components/parameters/parameters.scss
+++ b/src/components/parameters/parameters.scss
@@ -47,7 +47,7 @@
 
     &:nth-of-type(1) {
       top: 90px;
-      left: 65px;
+      left: 42px;
 
       #{$this}-text {
         bottom: calc(100% + 5px);
@@ -69,11 +69,11 @@
 
     &:nth-of-type(3) {
       top: 275px;
-      left: 75%;
+      left: 72%;
 
       #{$this}-text {
         bottom: calc(100% + 5px);
-        right: 0;
+        right: -30px;
         transform: translateX(50%);
       }
     }
@@ -101,35 +101,35 @@
     }
 
     &:nth-of-type(6) {
-      top: 280px;
-      right: 75%;
+      top: 212px;
+      right: 74%;
 
       #{$this}-text {
-        top: calc(100% - 35px);
-        left: 0;
+        top: 100%;
+        left: 25px;
         transform: translateX(-50%);
       }
     }
 
     &:nth-of-type(7) {
-      top: 200px;
+      top: 175px;
       right: 83%;
 
       #{$this}-text {
-        bottom: calc(100% + 5px);
-        left: 0;
+        top: calc(100% - 32px);
+        left: -35px;
         transform: translateX(-50%);
       }
     }
 
     &:nth-of-type(8) {
-      top: 145px;
-      right: 58%;
+      top: 135px;
+      right: 53%;
 
       #{$this}-text {
         bottom: calc(100% + 5px);
         left: 0;
-        transform: translateX(-50%);
+        transform: translateX(-90%);
       }
     }
   }
