fix button footer

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -10,5 +10,5 @@ mixin footer
           | Хотим, чтобы наши малыши несли прекрасное в этот мир.
           br
           | Мы поможем найти именно Вашего маленького друга!
-        a.btn.btn--border.footer__btn.js-open-popup(href="#")
+        a.btn.footer__btn.js-open-popup(href="#")
           span.btn__text Хочу щенка!
