add new dog for catalog

--- a/src/components/catalog/catalog.pug
+++ b/src/components/catalog/catalog.pug
@@ -3,69 +3,51 @@ mixin catalog
     const cardData = [
       {
         img: 'dog1.png',
-        title: 'Черно-подпалый',
-        text1: 'возраст: 2 месяца',
-        text2: 'дата рождения: 1.01.2020'
+        title: 'Крем-соболь',
       },
       {
         img: 'dog2.png',
         title: 'Рыжий',
-        text1: 'возраст: 2 месяца',
-        text2: 'дата рождения: 13.01.2020'
       },
       {
         img: 'dog3.png',
-        title: 'Рыжий',
-        text1: 'возраст: 2 месяца',
-        text2: 'дата рождения: 13.01.2020'
+        title: 'Белый',
       },
       {
         img: 'dog4.png',
-        title: 'Рыжий',
-        text1: 'возраст: 2 месяца',
-        text2: 'дата рождения: 13.01.2020'
+        title: 'Черный',
       },
       {
         img: 'dog5.png',
-        title: 'Рыжий',
-        text1: 'возраст: 2 месяца',
-        text2: 'дата рождения: 13.01.2020'
+        title: 'Лиловый',
       },
       {
         img: 'dog6.png',
-        title: 'Рыжий',
-        text1: 'возраст: 2 месяца',
-        text2: 'дата рождения: 13.01.2020'
+        title: 'Пати-колор',
       },
       {
         img: 'dog7.png',
-        title: 'Рыжий',
-        text1: 'возраст: 2 месяца',
-        text2: 'дата рождения: 13.01.2020'
+        title: 'Кремовый',
       },
       {
         img: 'dog8.png',
-        title: 'Рыжий',
-        text1: 'возраст: 2 месяца',
-        text2: 'дата рождения: 13.01.2020'
+        title: 'Мерле',
       },
       {
         img: 'dog9.png',
-        title: 'Рыжий',
-        text1: 'возраст: 2 месяца',
-        text2: 'дата рождения: 13.01.2020'
+        title: 'Рыже-соболинный',
       },
       {
         img: 'dog10.png',
-        title: 'Рыжий',
-        text1: 'возраст: 2 месяца',
-        text2: 'дата рождения: 13.01.2020'
+        title: 'Оранж',
       },
       {
         img: 'dog11.png',
-        title: 'Рыжий',
-        text1: 'возраст: 2 месяца',
-        text2: 'дата рождения: 13.01.2020'
+        title: 'Коричневый',
+      },
+      {
+        img: 'dog12.png',
+        title: 'Черно-подпалый',
       }
     ]
 
@@ -83,7 +65,5 @@ mixin catalog
               .catalog__card-back
                 .catalog__card-content
                   p.catalog__card-title !{card.title}
-                  p.catalog__card-text !{card.text1}
-                  p.catalog__card-text !{card.text2}
                   a.btn.catalog__btn.js-open-popup(href="#")
                     span.btn__text Хочу!
