add new style for all

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,9 +1,9 @@
 .footer {
   background-image: url('../img/footer_bg.png');
-  background-size: contain;
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: bottom center;
-  padding: 40px 0 130px;
+  padding: 40px 0 180px;
 
   &__content {
     position: relative;
