--- a/src/components/reviews/reviews.scss
+++ b/src/components/reviews/reviews.scss
@@ -10,6 +10,10 @@
     text-align: center;
   }
 
+  &__container {
+    position: relative;
+  }
+
   &__slider {
     height: 335px;
     width: 100%;
@@ -76,6 +80,32 @@
       &-active-prev-prev {
         transform: scale(.5);
       }
+    }
+  }
+
+  &__slider-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: -70px;
+    z-index: 2;
+    cursor: pointer;
+    fill: $color-main;
+    opacity: .5;
+    transition: opacity .2s;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    &:focus {
+      outline: none;
+    }
+
+    &-prev {
+      right: auto;
+      left: -70px;
+      transform: translateY(-50%) rotate(180deg);
     }
   }
 }
