fix footer, callback, popup and new dog for catalog

--- a/src/components/callback/callback.scss
+++ b/src/components/callback/callback.scss
@@ -10,9 +10,10 @@
 
   &__img {
     position: absolute;
-    bottom: -20px;
-    left: -300px;
+    top: calc(50% - 205px);
+    left: -120px;
     max-width: 100%;
+    width: 630px;
   }
 
   &__content {
