--- a/src/components/catalog/catalog.pug
+++ b/src/components/catalog/catalog.pug
@@ -49,12 +49,17 @@ mixin catalog
       {
         img: 'dog10.png',
         title: 'Лиловый',
-        text: 'Один из самых редких окрасов, наряду с «мерле» и «голубым». Это цвет моточного шоколада с фиолетовым оттенком.'
+        text: 'Один из самых редких окрасов, наряду с «мерле» и «голубым». Это цвет молочного шоколада с фиолетовым оттенком.'
       },
       {
         img: 'dog11.png',
         title: 'Мерле',
         text: 'Мерле(мраморный). Один из самых редких окрасов. Уникален тем, что расположение мрамора никогда не повторяется. Ваш щенок будет единственным в своём окрасе.'
+      },
+      {
+        img: 'dog12.png',
+        title: 'Шоколадный',
+        text: 'Достаточно редкий окрас. Чтобы щенок был шоколадным всегда, «не поседел» или не стал рыже-шоколадным, шерсть должна быть хорошо пигментирована.'
       }
     ]
 
