--- a/src/components/popup/popup.pug
+++ b/src/components/popup/popup.pug
@@ -9,9 +9,9 @@ mixin popup
         alt= 'popup_img'
         )
       form.popup__content(action="")
-        h3.popup__title Лучший щенок уже ждет вас!
+        h3.popup__title Лучший щенок уже ждет Вас!
         p.popup__text Оставьте телефон, и мы отправим фото нужного щеночка, поможем с выбором и проконсультируем
         .popup__flex
-          input.popup__input(type="text" placeholder="Введите ваш номер телефона")
+          input.popup__input(type="text" placeholder="Введите Ваш номер телефона")
           button.btn.btn--border.popup__btn
             span.btn__text Хочу щенка!
