--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,33 +2,33 @@
   background-image: url('../img/footer_bg.png');
   background-size: 100%;
   background-repeat: no-repeat;
-  background-position: bottom center;
+  background-position: top center;
   padding: 40px 0 180px;
 
   &__content {
     position: relative;
-    border-radius: 6px;
-    background-color: rgba(87, 70, 60, 0.612);
+    // border-radius: 6px;
+    // background-color: rgba(87, 70, 60, 0.612);
     text-align: center;
     padding: 40px;
-    padding-left: 120px;
+    // padding-left: 120px;
     max-width: 859px;
     margin: 0 auto;
 
-    &:after {
-      content: '';
-      display: block;
-      position: absolute;
-      width: 316px;
-      height: 434px;
-      left: 0;
-      bottom: 0;
-      background-image: url('../img/footer_dog.png');
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-position: center center;
-      transform: translate(-50%, 20%);
-    }
+    // &:after {
+    //   content: '';
+    //   display: block;
+    //   position: absolute;
+    //   width: 316px;
+    //   height: 434px;
+    //   left: 0;
+    //   bottom: 0;
+    //   background-image: url('../img/footer_dog.png');
+    //   background-repeat: no-repeat;
+    //   background-size: contain;
+    //   background-position: center center;
+    //   transform: translate(-50%, 20%);
+    // }
   }
 
   &__title {
@@ -46,7 +46,8 @@
 
   &__btn {
     position: absolute;
-    left: calc(50% + 40px);
+    // left: calc(50% + 40px);
+    left: 50%;
     bottom: 0;
     transform: translate(-50%, 50%);
     box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.46);
