--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -10,5 +10,5 @@ mixin header
             +img('icons/phone.png', 'header__icon')
             span.header__link-gray +7 (985)
             | 191-41-42
-          a.link.js-open-popup(href="#")
+          a.link.header__link-callback.js-open-popup(href="#")
             span.link__text Заказать обратный звонок
