--- a/src/components/callback/callback.pug
+++ b/src/components/callback/callback.pug
@@ -13,5 +13,5 @@ mixin callback
           p.callback__desc У нас есть любой
           p.callback__text Оставьте телефон, и мы отправим фото нужного щеночка, поможем с выбором и проконсультируем
           input.callback__input(type="text" placeholder="Введите ваш номер телефона")
-          button.btn.btn--border
+          button.btn.btn--border.callback__btn
             span.btn__text Свяжитесь со мной!
