--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -5,36 +5,32 @@
   background-position: top center;
   padding: 40px 0 180px;
 
+  @include tablet {
+    padding: 40px 0 100px;
+    background-size: cover;
+    background-position: center top;
+  }
+
   &__content {
     position: relative;
-    // border-radius: 6px;
-    // background-color: rgba(87, 70, 60, 0.612);
     text-align: center;
     padding: 40px;
-    // padding-left: 120px;
     max-width: 859px;
     margin: 0 auto;
 
-    // &:after {
-    //   content: '';
-    //   display: block;
-    //   position: absolute;
-    //   width: 316px;
-    //   height: 434px;
-    //   left: 0;
-    //   bottom: 0;
-    //   background-image: url('../img/footer_dog.png');
-    //   background-repeat: no-repeat;
-    //   background-size: contain;
-    //   background-position: center center;
-    //   transform: translate(-50%, 20%);
-    // }
+    @include mobile {
+      padding: 0;
+    }
   }
 
   &__title {
     font-size: 30px;
     font-weight: 600;
     line-height: 1.5;
+
+    @include mobile {
+      font-size: 28px;
+    }
   }
 
   &__text {
@@ -42,15 +38,24 @@
     font-weight: 600;
     line-height: 1.5;
     margin-bottom: 30px;
+
+    @include mobile {
+      font-size: 14px;
+    }
   }
 
   &__btn {
     position: absolute;
-    // left: calc(50% + 40px);
     left: 50%;
     bottom: 0;
     transform: translate(-50%, 50%);
     box-shadow: 0px 8px 13px 0px rgba(0, 0, 0, 0.46);
+
+    @include tablet {
+      position: relative;
+      left: 0;
+      transform: none;
+    }
 
     &:before {
       transform: none;
