--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -13,6 +13,14 @@
   &__logo {
     display: flex;
     align-items: center;
+
+    @include tablet {
+      max-width: 40%;
+    }
+
+    @include mobile {
+      max-width: none;
+    }
   }
 
   &__logo-img {
@@ -25,6 +33,15 @@
     font-weight: bold;
     text-transform: uppercase;
     margin-right: 24px;
+
+    @include tablet {
+      font-size: 18px;
+      margin-right: 0;
+    }
+
+    @include mobile {
+      font-size: 14px;
+    }
   }
 
   &__contacts {
@@ -42,6 +59,15 @@
     text-decoration: none;
     transition: color .2s ease-out;
 
+    @include tablet {
+      font-size: 16px;
+      margin-right: 10px;
+    }
+
+    @include mobile {
+      display: none;
+    }
+
     &:hover {
       color: $color-main;
 
@@ -55,5 +81,23 @@
     margin: 0 8px;
     color: $color-gray;
     transition: color .3s ease-out;
+  }
+
+  &__link-callback {
+    @include mobile {
+      display: block;
+      width: 46px;
+      height: 46px;
+      background-color: $color-main;
+      background-image: url('../img/icons/phone-mob.png');
+      background-size: 50%;
+      background-repeat: no-repeat;
+      background-position: center center;
+      border-radius: 100%;
+
+      span {
+        display: none;
+      }
+    }
   }
 }
