--- a/src/components/help/help.pug
+++ b/src/components/help/help.pug
@@ -30,10 +30,10 @@ mixin help
           data-aos-delay="800"
           )
           +img('icons/advantage10.png', 'help__item-icon')
-          p.advantages__advantage-text Поможем начать карьеру будущему чемпиону
+          p.help__item-text Поможем начать карьеру будущему чемпиону
         .help__item(
           data-aos="fade-up"
           data-aos-delay="1000"
           )
           +img('icons/advantage11.png', 'help__item-icon')
-          p.advantages__advantage-text Подберем щенка «на подушку» или для вязки
+          p.help__item-text Подберем щенка «на подушку» или для вязки
