--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -21,6 +21,13 @@
     max-width: 925px;
     background-color: $color-white;
     border-radius: 8px;
+
+    @include tablet {
+      width: 95%;
+      height: 95%;
+      text-align: center;
+      padding: 15px;
+    }
   }
 
   &__close {
@@ -31,6 +38,11 @@
     opacity: .1;
     transition: opacity .3s;
 
+    @include mobile {
+      top: 20px;
+      right: 20px;
+    }
+
     &:hover {
       opacity: 1;
     }
@@ -40,12 +52,28 @@
     position: absolute;
     bottom: 0;
     left: 0;
+
+    @include mobile {
+      position: relative;
+      display: inline-block;
+      width: 50%;
+      left: 15px;
+    }
   }
 
   &__content {
     position: relative;
     margin-left: 45%;
     padding: 80px 0 96px;
+
+    @include tablet {
+      padding: 70px 0 84px;
+    }
+
+    @include mobile {
+      margin-left: 0;
+      padding: 0;
+    }
   }
 
   &__title {
@@ -55,6 +83,16 @@
     font-size: 42px;
     font-weight: bold;
     color: #27211e;
+
+    @include tablet {
+      font-size: 36px;
+    }
+
+    @include mobile {
+      font-size: 28px;
+      margin: 0 auto 20px;
+      max-width: 250px;
+    }
   }
 
   &__text {
@@ -63,6 +101,15 @@
     font-size: 20px;
     font-weight: bold;
     line-height: 1.5;
+
+    @include tablet {
+      font-size: 18px;
+    }
+
+    @include mobile {
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
   }
 
   &__input {
@@ -81,6 +128,20 @@
     color: #292421;
     font-weight: bold;
 
+    @include tablet {
+      font-size: 18px;
+      padding: 20px 12px 20px 56px;
+      background-position: 12px center;
+      margin-bottom: 26px;
+    }
+
+    @include mobile {
+      font-size: 14px;
+      padding: 18px 12px 18px 56px;
+      background-position: 9px center;
+      margin-bottom: 26px;
+    }
+
     &:focus {
       outline: none;
     }
@@ -89,6 +150,13 @@
   &__btn {
     min-width: 300px;
     color: $color-main;
+
+    @include tablet {
+      font-size: 16px;
+      color: $color-white;
+      padding: 15px 20px;
+      min-width: 250px;
+    }
 
     &:hover {
       color: $color-white;
