--- a/src/components/reviews/reviews.scss
+++ b/src/components/reviews/reviews.scss
@@ -2,12 +2,20 @@
   position: relative;
   padding: 32px 0;
 
+  @include mobile {
+    padding-top: 0;
+  }
+
   $this: &;
 
   &__title {
     font-size: 42px;
     font-weight: bold;
     text-align: center;
+
+    @include mobile {
+      font-size: 28px;
+    }
   }
 
   &__container {
@@ -17,6 +25,10 @@
   &__slider {
     height: 335px;
     width: 100%;
+  }
+
+  &__slider-slide {
+    text-align: center;
   }
 
   &__slider-img {
@@ -34,6 +46,10 @@
     transform: translateX(-50%);
     width: 100% !important;
     z-index: 2;
+
+    @include tablet {
+      display: none;
+    }
 
     .swiper-pagination-bullet {
       display: flex;
@@ -94,6 +110,10 @@
     opacity: .5;
     transition: opacity .2s;
 
+    @include tablet {
+      right: -30px;
+    }
+
     &:hover {
       opacity: 1;
     }
@@ -106,6 +126,10 @@
       right: auto;
       left: -70px;
       transform: translateY(-50%) rotate(180deg);
+
+      @include tablet {
+        left: -30px;
+      }
     }
   }
 }
