--- a/src/components/traces/traces.scss
+++ b/src/components/traces/traces.scss
@@ -6,6 +6,10 @@
   width: 100%;
   height: 100vh;
 
+  @include tablet {
+    display: none;
+  }
+
   &__content {
     position: relative;
     height: 100vh;
