--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -24,9 +24,12 @@
 
     @include tablet {
       width: 95%;
+      padding: 15px;
+    }
+
+    @include mobile {
       height: 95%;
       text-align: center;
-      padding: 15px;
     }
   }
 
