fix header mobile

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -9,6 +9,6 @@ mixin header
           a.header__link(href="tel:+79851914142")
             +img('icons/phone.png', 'header__icon')
             span.header__link-gray +7 (985)
-            | 191-41-42
+            span 191-41-42
           a.link.header__link-callback.js-open-popup(href="#")
             span.link__text Заказать обратный звонок
