--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -19,7 +19,7 @@
     }
 
     @include mobile {
-      max-width: none;
+      display: none;
     }
   }
 
@@ -28,11 +28,30 @@
     margin-right: 10px;
   }
 
+  &__mobile-block {
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 5px;
+  }
+
   &__title {
     font-size: 20px;
     font-weight: bold;
     text-transform: uppercase;
     margin-right: 24px;
+
+    &--mobile {
+      display: none;
+
+      @include mobile {
+        display: block;
+        padding-right: 10px;
+        font-size: 11px;
+        text-transform: uppercase;
+      }
+    }
 
     @include tablet {
       font-size: 18px;
@@ -47,6 +66,10 @@
   &__contacts {
     display: flex;
     align-items: center;
+
+    @include mobile {
+      align-items: stretch;
+    }
   }
 
   &__link {
@@ -65,20 +88,7 @@
     }
 
     @include mobile {
-      display: block;
-      width: 46px;
-      height: 46px;
-      background-color: $color-main;
-      background-image: url('../img/icons/phone-mob.png');
-      background-size: 50%;
-      background-repeat: no-repeat;
-      background-position: center center;
-      border-radius: 100%;
-      margin: 0;
-
-      span {
-        display: none;
-      }
+      justify-content: flex-end;
     }
 
     &:hover {
@@ -104,7 +114,20 @@
 
   &__link-callback {
     @include mobile {
-      display: none;
+      display: block;
+      width: 46px;
+      height: 46px;
+      background-color: $color-main;
+      background-image: url('../img/icons/phone-mob.png');
+      background-size: 50%;
+      background-repeat: no-repeat;
+      background-position: center center;
+      border-radius: 100%;
+      margin: 0;
+
+      span {
+        display: none;
+      }
     }
   }
 }
