--- a/src/components/help/help.pug
+++ b/src/components/help/help.pug
@@ -36,4 +36,7 @@ mixin help
           data-aos-delay="1000"
           )
           +img('icons/advantage11.png', 'help__item-icon')
-          p.help__item-text Подберем щенка «на подушку» или для вязки
+          p.help__item-text
+            | Подберем щенка
+            br
+            | «на подушку» или для вязки
