--- a/src/components/popup/popup.pug
+++ b/src/components/popup/popup.pug
@@ -8,10 +8,10 @@ mixin popup
         class= className
         alt= 'popup_img'
         )
-      form.popup__content(action="")
+      form.popup__content.js-form-submit(action="")
         h3.popup__title Лучший щенок уже ждет Вас!
         p.popup__text Оставьте телефон, и мы отправим фото нужного щеночка, поможем с выбором и проконсультируем
         .popup__flex
-          input.popup__input(type="text" placeholder="Введите Ваш номер телефона")
+          input.popup__input(type="tel" required pattern="^[ 0-9]+$" name='phone' placeholder="Введите Ваш номер телефона")
           button.btn.btn--border.popup__btn
             span.btn__text Хочу щенка!
