--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,7 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Minimi
+    title Щенки померанского шпица
     link(rel="icon" href="./source/img/logo.png" type="image/png")
     link(rel="stylesheet", href="./source/style/style.css")
   body
