--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -12,5 +12,6 @@ mixin header
               +img('icons/phone.png', 'header__icon')
               span.header__link-gray +7 (985)
               span 191-41-42
+          a.header__mobile-link(href="tel:+79851914142")
           a.link.header__link-callback.js-open-popup(href="#")
             span.link__text Заказать обратный звонок
